--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -16,6 +17,9 @@ body {
   margin-left: -50px;
   margin-top: 55px;
   height: 150px;
+  font-family: "Press Start 2P";
+  font-size: 15px;
+  padding: 5px;
 }
 
 .bossFlexbox {
@@ -69,6 +73,27 @@ body {
   background-color: red;
   height: 15px;
   width: 200px;
+  margin-top: 10px;
+}
+
+.UserhealthBarHpLose1 {
+  background-color: red;
+  height: 15px;
+  width: 133.333333333px;
+  margin-top: 10px;
+}
+
+.UserhealthBarHpLose2 {
+  background-color: red;
+  height: 15px;
+  width: 66.6666666667px;
+  margin-top: 10px;
+}
+
+.UserhealthBarDie {
+  background-color: red;
+  height: 15px;
+  width: 0px;
   margin-top: 10px;
 }
 
