--- a/styles/style.scss
+++ b/styles/style.scss
@@ -41,6 +41,7 @@ body {
   width: 200px;
   margin-top: -110px;
   margin-left: 25px;
+  transition: width 2s;
 }
 
 .healthBarHpLose1 {
@@ -79,6 +80,7 @@ body {
   height: 15px;
   width: 200px;
   margin-top: 10px;
+  transition: width 2s;
 }
 
 .UserhealthBarHpLose1 {
